--- a/package.json
+++ b/package.json
@@ -18,15 +18,22 @@
     "gulp": "^3.9.1",
     "gulp-pug": "^3.3.0",
     "gulp-stylus": "^2.6.0",
+    "highlight.js": "^9.11.0",
     "http-server": "^0.10.0",
     "imagemin": "^5.2.2",
+    "imagemin-mozjpeg": "^6.0.0",
+    "imagemin-pngquant": "^5.0.0",
     "jimp": "^0.2.27",
+    "jstransformer-markdown-it": "^2.0.0",
+    "marked": "^0.3.6",
     "pug": "^2.0.0-rc.1",
     "shelljs": "^0.7.7",
     "stylus": "^0.54.5",
+    "yaml-front-matter": "^3.4.0",
     "yargs": "^8.0.1"
   },
   "devDependencies": {
-    "imagemin-jpeg-recompress": "^5.1.0"
+    "imagemin-jpeg-recompress": "^5.1.0",
+    "imagemin-optipng": "^5.2.1"
   }
 }
