--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "bin": {
     "render": "_bin/render.js",
-    "push": "_bin/push.js"
+    "push": "_bin/push.js",
+    "preview": "_bin/preview.js"
   },
   "author": "timi",
   "license": "ISC",
@@ -26,10 +27,20 @@
     "imagemin-pngquant": "^5.0.0",
     "jimp": "^0.2.27",
     "marked": "^0.3.6",
-    "pug": "^2.0.0-rc.1",
     "shelljs": "^0.7.7",
     "stylus": "^0.54.5",
     "yaml-front-matter": "^3.4.0",
     "yargs": "^8.0.1"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.18.12",
+    "koa": "^2.3.0",
+    "koa-mount": "^3.0.0",
+    "koa-refresh": "0.0.1",
+    "koa-static": "^4.0.0",
+    "object-path": "^0.11.4",
+    "open": "0.0.5",
+    "pug": "^2.0.0-rc.2",
+    "tfunk": "^3.1.0"
   }
 }
