牛角叩殘歌轉急，請看平地有波瀾。____by_李之儀

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "bin": {
     "render": "_bin/render.js",
     "push": "_bin/push.js",
-    "preview": "_bin/preview.js"
+    "preview": "_bin/preview.js",
+    "publish": "_bin/publish.js"
   },
   "author": "timi",
   "license": "ISC",
