--- a/package.json
+++ b/package.json
@@ -18,27 +18,28 @@
     "curl": "^0.1.4",
     "del": "^2.2.2",
     "glob-all": "^3.1.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-pug": "^3.3.0",
     "gulp-stylus": "^2.6.0",
     "highlight.js": "^9.11.0",
-    "http-server": "^0.10.0",
+    "http-server": "^0.11.1",
     "imagemin": "^5.2.2",
-    "imagemin-jpeg-recompress": "^5.1.0",
-    "imagemin-pngquant": "^5.0.0",
-    "jimp": "^0.2.27",
+    "imagemin-jpeg-recompress": "^6.0.0",
+    "imagemin-pngquant": "^7.0.0",
+    "jimp": "^0.6.0",
     "marked": "^0.3.6",
     "shelljs": "^0.7.7",
     "stylus": "^0.54.5",
+    "vue": "^2.6.6",
     "yaml-front-matter": "^3.4.0",
     "yargs": "^8.0.1"
   },
   "devDependencies": {
-    "browser-sync": "^2.18.12",
-    "koa": "^2.3.0",
+    "browser-sync": "^2.26.3",
+    "koa": "^2.7.0",
     "koa-mount": "^3.0.0",
     "koa-refresh": "0.0.1",
-    "koa-static": "^4.0.0",
+    "koa-static": "^5.0.0",
     "object-path": "^0.11.4",
     "open": "0.0.5",
     "pug": "^2.0.0-rc.2",
